# server.js
@@ -4,13 +4,16 @@ require('dotenv').config();
 // Import dependencies
 const express = require('express');
 const cors = require('cors');
+const session = require('express-session');
+const passport = require('passport'); 
 const connectDB = require('./config/db');
-const express = require('passport')
+require('./auth/passport'); // Initialize passport config
 
 // Swagger setup
 const swaggerUi = require('swagger-ui-express');
 const fs = require('fs');
 const swaggerDocument = JSON.parse(fs.readFileSync('./swagger.json', 'utf8'));
+
 
 const app = express();
 
@@ -20,11 +23,23 @@ connectDB();
 // Middleware
 app.use(cors());
 app.use(express.json());
+app.use(
+  session({
+    secret: 'session-secret',
+    resave: false,
+    saveUninitialized: true
+  })
+);
+
+app.use(passport.initialize());
+app.use(passport.session());
+
 
 // Swagger route
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // API routes
+app.use('/auth', require('./routes/authRoutes'));
 app.use('/api/items', require('./routes/itemRoutes'));
 app.use('/api/users', require('./routes/userRoutes'));
 
